# lib/crm/adapters/get_into_teaching/resources/schools_experience_resource.rb
@@ -1,0 +1,13 @@
+module CRM
+  module Adapters
+    module GetIntoTeaching
+      module Resources
+        class SchoolsExperienceResource < CRM::Adapters::GetIntoTeaching::Resource
+          def create_candidate(body)
+            post_request("/api/schools_experience/candidates", body:)
+          end
+        end
+      end
+    end
+  end
+end
